# snark-setup-operator

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: core.yml
e2e/: challenge  challenge.hash  circuit_2992c  combined  combined_new_verified_pok_and_correctness_new_challenge  combined_verified_pok_and_correctness_new_challenge.hash  e2e.sh  e2ephase1.sh  e2ephase2.sh  empty.json  empty_phase1.json  empty_phase2.json  new_challenge_0  new_challenge_1  new_challenge_2  new_challenge_3  new_challenge_4  new_challenge_5  new_challenge_6  new_challenge_7  phase2_init  plumo-contributor-2.keys  plumo-contributor.keys  plumo-verifier.keys  plumo.attestation.txt  response  response.hash  response_0  response_1  response_2  response_3  response_4  response_5  response_6  response_list  transcript  transcript_1613528665066880000  transcript_1613528815508956000
scripts/: create_vms.sh  cross_compile.sh  destroy_vms.sh  hashes_to_markdown.sh  release_docker.py  restart_client.sh  restart_clients.sh  server-nginx-conf  setup_all.sh  setup_client.sh  setup_contributor.sh  setup_new_ceremony.sh  setup_server.sh  upgrade_client.sh  upgrade_clients.sh  utils.sh
src/: .data_structs.rs.swp  .utils.rs.swp  blobstore.rs  data_structs.rs  diff.txrt  error.rs  lib.rs  metrics.rs  transcript_data_structs.rs  utils.rs
