[package]
name = "snark-setup-operator"
version = "0.1.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
azure_core = { git = "https://github.com/Azure/azure-sdk-for-rust", package = "azure_core", default-features = false }
azure_storage = { git = "https://github.com/Azure/azure-sdk-for-rust", package = "azure_storage", default-features = false, features = ["blob"] }
tokio = { version = "0.2", features = [ "full" ] }
byteorder = "1.3.4"
retry = "1.1.0"
serde_json = { version = "1.0", features = [ "preserve_order" ] }
serde = { version = "1.0", features = [ "derive" ] }
chrono = {version = "0.4", features = [ "serde" ] }
gumdrop = { version = "0.7" }
url = { version = "2" }
thiserror = { version = "1" }
tracing = "0.1"
tracing-appender = "0.1.1"
tracing-subscriber = "0.2"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["celo"] }
hex = "0.4"
phase1 = { git = "https://github.com/celo-org/snark-setup", package = "phase1", rev = "93e435877e7979f726da7931f9150a5f2e7f82b0" }
phase1-cli = { git = "https://github.com/celo-org/snark-setup", package = "phase1-cli", rev = "93e435877e7979f726da7931f9150a5f2e7f82b0" }
rand = "0.7"
reqwest = { version = "0.10", features = [ "blocking", "stream", "gzip" ] }
setup-utils = { git = "https://github.com/celo-org/snark-setup", package = "setup-utils", rev = "93e435877e7979f726da7931f9150a5f2e7f82b0" }
secrecy = { version = "0.7" }
ctrlc = "3.1.7"
indicatif = "0.15.0"
zexe_algebra = { git = "https://github.com/celo-org/zexe", rev = "02ee669fa43059b55918210e025183e572cc249d", package = "algebra", default-features = false, features = [ "bw6_761", "bls12_377" ] }
openssl-sys = { version = "0.9", features = ["vendored"]}
age = { git = "https://github.com/str4d/rage", version = "0.4.0", features = [ "cli-common", "armor" ] }
bincode = "1.3"
panic-control = "0.1.4"
lazy_static = "1.4.0"
futures = "0.3"
futures-retry = "0.5.0"
blake2 = "0.9"
rpassword = "5.0.0"
keep-awake = { git = "https://github.com/mrsmkl/keep-awake-rs", rev = "63da170407e4ced0e9bbaf42b380fceea6436ea6" }
rayon = "1.4"
num_cpus = "1.13"
ring = "0.16.19"
cfg-if = "1.0"

[target.'cfg(not(target_arch = "aarch64"))'.dependencies]
sysinfo = { version = "0.15.3" }

[features]
default = [ "bw6_asm" ]
cuda = [ "zexe_algebra/cuda" ]
bw6_asm = [ "zexe_algebra/force_bw6_asm" ]

[patch.'https://github.com/scipr-lab/zexe']
zexe_algebra_core = { git = "https://github.com/celo-org/zexe", rev = "02ee669fa43059b55918210e025183e572cc249d", package = "algebra-core", default-features = false, features = ["derive"] }
zexe_algebra = { git = "https://github.com/celo-org/zexe", rev = "02ee669fa43059b55918210e025183e572cc249d", package = "algebra", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }
zexe_fft = { git = "https://github.com/celo-org/zexe", rev = "02ee669fa43059b55918210e025183e572cc249d", package = "ff-fft", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }
zexe_bench_utils = { git = "https://github.com/celo-org/zexe", rev = "02ee669fa43059b55918210e025183e572cc249d", package = "bench-utils", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }
zexe_r1cs_core = { git = "https://github.com/celo-org/zexe", rev = "02ee669fa43059b55918210e025183e572cc249d", package = "r1cs-core", default-features = false, features = ["ed_on_bls12_381", "bls12_381", "bls12_377"] }

